remove MaxPermSize option
sbt 1.0 require Java 8.
The MaxPermSize option removed since Java 8.